@@ -14,6 +14,8 @@ Changes in version 3.2 M1
 * add Servlet 3.0 based async support
 * fix issue with encoded params in UriComponentsBuilder
 * add Jackson 2 HttpMessageConverter and View types
+* add pretty print option to Jackson HttpMessageConverter and View types
+* fix issue with resolving Errors controller method argument
 
 Changes in version 3.1.1 (2012-02-16)
 -------------------------------------
